--- a/archaizmolog/index.html
+++ b/archaizmolog/index.html
@@ -314,7 +314,7 @@
 		}
 
 		::-webkit-scrollbar {
-			width: 6px;
+			width: 4px;
 		}
 
 		::-webkit-scrollbar-track {
@@ -375,6 +375,10 @@
 
 			.card {
 				height: calc(50% - 10px);
+			}
+
+			::-webkit-scrollbar {
+				width: 6px;
 			}
 		}
 
