scrollbar responsive fix

--- a/archaizmolog/index.html
+++ b/archaizmolog/index.html
@@ -111,7 +111,7 @@
 			overflow-y: auto;
 			scrollbar-width: thin;
 			scrollbar-color: white transparent;
-			padding-right: 14px;
+			padding-right: 18px;
 		}
 
 		[class*=show_article] .preview {
@@ -273,7 +273,7 @@
 			overflow-y: auto;
 			scrollbar-width: thin;
 			scrollbar-color: white transparent;
-			padding-right: 14px;
+			padding-right: 18px;
 		}
 
 		.article-footer {
@@ -314,7 +314,7 @@
 		}
 
 		::-webkit-scrollbar {
-			width: 4px;
+			width: 2px;
 		}
 
 		::-webkit-scrollbar-track {
@@ -379,6 +379,11 @@
 
 			::-webkit-scrollbar {
 				width: 6px;
+			}
+
+			.preview,
+			.article-body {
+				padding-right: 14px;
 			}
 		}
 
