--- a/archaizmolog/index.html
+++ b/archaizmolog/index.html
@@ -584,13 +584,13 @@
 								Мы видим свет, забыв про средства.</p>
 							<p>Ведь даже крылья опалив,<br>
 								Мы рухнем, так не выбрав места<br>
-								И очи ветром растворит -<br>
+								И очи ветром отворит -<br>
 								О как мир пуст, хотя в нем тесно.
 							</p>
 							<p>И пока хор картинок блек,<br>
 								Я усомнился в темпе шества:<br>
 								Сиюминутным был наш век -<br>
-								Лишь всплеск, щелчок, лишь миг, искра.
+								Лишь всплеск, щелчок, лишь миг, лишь искра.
 							</p>
 							<p>Обидно слыть еще одним,<br>
 								Когда хотел виной торжества.
