--- a/archaizmolog/index.html
+++ b/archaizmolog/index.html
@@ -1098,7 +1098,9 @@
 
 		const readAloud = (target) => {
 
-			target.classList.toggle('pause');
+			// target.classList.toggle('pause');
+
+			paused ? target.classList.add('pause') : target.classList.remove('pause');
 
 			if (window.speech) {
 
@@ -1109,8 +1111,8 @@
 						// window.speech = null;
 						// clearTimeout(myTimeout);
 						window.speechSynthesis.resume();
+						return;
 					}
-					return;
 				}
 				else {
 					paused = true;
