--- a/archaizmolog/index.html
+++ b/archaizmolog/index.html
@@ -1118,7 +1118,7 @@
 					window.speechSynthesis.pause();
 
 					if (/android/i.test(navigator.userAgent)) {
-						// window.speech = null;
+						window.speech = null;
 						clearTimeout(myTimeout);
 					}
 					// pausedAtS = (new Date()).getTime() / 1000;
